# uart

./: config.py  main.py  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: deploy-dev.yml  deploy.yml
app/: config.py  db.py  main.py  telegram_notify.py
app/bot/: admin_mw.py  bot.py
app/middleware/: body_limit.py  cooldown_limit.py
app/routers/: health.py  submit.py
static/: index.html  script.js
static/css/: main.css  style.css
static/img/: image-manifest.json
static/img/avatars/: chepiganew1-240.avif  chepiganew1-480.avif  chepiganew1-720.avif  exy-240.avif  exy-480.avif  exy-720.avif  salakhov-240.avif  salakhov-480.avif  salakhov-720.avif  shah-240.avif  shah-480.avif  shah-720.avif  urtaykin-240.avif  urtaykin-480.avif  urtaykin-720.avif
static/img/cases/: 2030-520.avif  2030-960.avif  IMG_0808-1280.avif  IMG_0808-520.avif  IMG_0808-960.avif  IMG_0813-1344.avif  IMG_0813-520.avif  IMG_0813-960.avif  IMG_0814-1440.avif  IMG_0814-520.avif  IMG_0814-960.avif  berizaryad-520.avif  berizaryad-960.avif  dinamo-1280.avif  dinamo-520.avif  dinamo-960.avif  koncert-1179.avif  koncert-520.avif  koncert-960.avif  korporat-1440.avif  korporat-520.avif  korporat-960.avif  leto-1440.avif  leto-520.avif  leto-960.avif  private-1179.avif  private-520.avif  private-960.avif  public-1025.avif  public-520.avif  public-960.avif  sever-1280.avif  sever-520.avif  sever-960.avif
static/img/hero/: hero@1200.avif  hero@1600.avif  hero@800.avif
static/js/: main.js
static/js/forms/: applicants.js  feedback.js
static/js/ui/: carousel.js  fallbacks.js  nav.js  (+3 more)
(+2 files in other folders)
